--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-Google_API_Key=AIzaSyA8gCW9MyyDWTaI1qc7EtCv884PT2RU2R4
-CX=005505842865967672992:jrodkjxno65
-DB="mongodb://beopallohayan:otakughost@cluster0-shard-00-00-i752k.mongodb.net:27017,cluster0-shard-00-01-i752k.mongodb.net:27017,cluster0-shard-00-02-i752k.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority;"
+Google_API_Key=
+CX=
+DB=
